--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,9 @@
 .body{
    background-color:bisque
 }
-
+.bd-highlight{
+   background-color: bisque;
+}
 .cards{
    background-color: aliceblue;
    border: 1px solid white;
@@ -65,3 +67,16 @@
    justify-content: space-between;
    
 }
+#card{
+
+   background-color: goldenrod;
+   margin: 10px;
+   align-items: center;
+   padding-bottom: 10px;
+ }
+ #teachercontainer{
+ margin-top: 10px;
+   display:flex;
+   flex-direction: row;
+   align-items: center;
+ }
